# Week12-medical-telegram-warehouse

./: .gitignore  BLOG_POST.md  Dockerfile  README.md  TEST_RESULTS.md  docker-compose.yml  find_tables.py  main.py  medical_scraper_session.session  pipeline.py  pyproject.toml  render.yaml  requirements.txt  test_api_db.py  test_visual.py
.github/workflows/: ci.yml
api/: database.py  main.py  schemas.py
api/routers/: analytics.py
dashboard/: dashboard.py
dashboard/components/: __init__.py
data/: yolo_detections.csv
data/raw/telegram_messages/2023-02-10/: CheMed123.jsonl
data/raw/telegram_messages/2024-05-03/: ethiopharmaceutical.jsonl
data/raw/telegram_messages/2026-02-06/: lobelia4cosmetics.jsonl
data/raw/telegram_messages/2026-02-07/: lobelia4cosmetics.jsonl
data/raw/telegram_messages/2026-02-09/: lobelia4cosmetics.jsonl
data/raw/telegram_messages/2026-02-10/: lobelia4cosmetics.jsonl
data/raw/telegram_messages/2026-02-11/: lobelia4cosmetics.jsonl  (+1 more)
medical_warehouse/: .user.yml  dbt_project.yml  profiles.yml
medical_warehouse/models/marts/: dim_channels.sql  dim_dates.sql  fct_image_detections.sql  fct_messages.sql  schema.yml
medical_warehouse/models/staging/: stg_telegram_messages.sql
medical_warehouse/tests/: assert_positive_views.sql
src/: load_raw_to_pg.py  load_yolo_to_pg.py  scraper.py  yolo_detect.py
src/config/: __init__.py  config.py  database.py
src/detection/: __init__.py  image_classifier.py  yolo_detect.py
src/loaders/: __init__.py  load_raw_to_pg.py  load_yolo_to_pg.py
src/scraper/: __init__.py  message_processor.py  scraper.py  telegram_client.py
src/utils/: __init__.py  logger.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_classifier.py  test_config.py  test_loaders.py  test_message_processor.py
(+2 files in other folders)
