[project]
name = "week12-medical-telegram-warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dagster>=1.12.14",
    "dagster-webserver>=1.12.14",
    "dbt-postgres>=1.10.0",
    "fastapi>=0.128.8",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.54.0",
    "telethon>=1.42.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.14",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.0",
]
